@@ -56,23 +56,28 @@ mi.dichotomous <- function( formula, data = NULL, start = NULL, n.iter = 100,
       n.iter = n.iter, start = start, drop.unused.levels = FALSE, 
       Warning = FALSE, ...)
   determ.pred <- predict(bglm.imp, newdata = data, type = "response")
-  if (draw.from.beta) {
-      sim.bglm.imp <- sim(bglm.imp, 1)
-      prob.pred <- invlogit(tcrossprod(cbind((X[mis, 1, drop = FALSE] * 
-          0 + 1), X[mis, , drop = FALSE]), sim.bglm.imp$beta))
-      random.temp <- rbinom(n.mis, 1, prob.pred)
+  if(n.mis>0){
+    if (draw.from.beta) {
+        sim.bglm.imp <- sim(bglm.imp, 1)
+        prob.pred <- invlogit(tcrossprod(cbind((X[mis, 1, drop = FALSE] * 
+            0 + 1), X[mis, , drop = FALSE]), sim.bglm.imp$beta))
+        random.temp <- rbinom(n.mis, 1, prob.pred)
+    }
+    else {
+        random.temp <- rbinom(n.mis, 1, determ.pred[mis])
+    }
+    random.pred <- random.temp 
+    random.pred <- replace(random.pred, random.temp == 0, y.levels[1])
+    random.pred <- replace(random.pred, random.temp == 1, y.levels[2])
+    names(random.pred) <- names(determ.pred[mis])                      
   }
-  else {
-      random.temp <- rbinom(n.mis, 1, determ.pred[mis])
+  else{
+    random.pred <- numeric(0)
   }
-  random.pred <- random.temp 
-  random.pred <- replace(random.pred, random.temp == 0, y.levels[1])
-  random.pred <- replace(random.pred, random.temp == 1, y.levels[2])
 
   if (is.logical(y.levels)) {                                      
     random.pred <- as.logical(random.pred)                         
   }                                                                 
-  names(random.pred) <- names(determ.pred[mis])                      
 
   result <- new(c("mi.dichotomous", "mi.method"),
               model = vector("list", 0), 
